--- a/FE/package.json
+++ b/FE/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "sweetalert2": "^11.15.3",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
