--- a/BE/.env
+++ b/BE/.env
@@ -1,1 +1,1 @@
-DB_ULR = "mongodb+srv://damthilananh8:6TYORsFQCrxNishU@cluster0.y6yrk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DB_ULR = "mongodb+srv://damthilananh8:6TYORsFQCrxNishU@cluster0.y6yrk.mongodb.net/book-store?retryWrites=true&w=majority&appName=Cluster0"
